--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "sqlite": "^5.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
