--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -23,10 +23,11 @@
     "react-dom": "^18",
     "sqlite": "^5.1.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.9.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
