--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "5.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -29,6 +30,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@types/node": "^20.9.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
