--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@types/node": "^20.9.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
